Updated default font size to 16 pixels. Attempting to fix bug on iphone where focus on text fields zooms in.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,7 +4,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
 * {
- font-size: 100%;
+ font-size: 16px;
  font-family: 'Cantarell', sans-serif;
 }
 
